<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:id="@+id/clock_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.ClockFragment">

            <TextView
                android:id="@+id/current_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/title_size"
                android:padding="@dimen/title_padding"
                android:text="@string/current_time" />

            <TextClock
                android:id="@+id/clock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_time_text"
                android:gravity="center"
                android:format12Hour="hh:mm:ss a"
                android:textSize="@dimen/title_size"
                android:padding="@dimen/title_padding" />

            <TextView
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/clock"
                android:gravity="center"
                android:textSize="@dimen/line_break_size"
                android:padding="@dimen/title_padding"
                android:text="@string/whitespace_single" />

        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/alarm_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/empty_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/subtitle_size"
                android:padding="@dimen/title_padding"
                android:text="@string/no_scheduled_tasks" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/line_break_size"
                android:padding="@dimen/title_padding"
                android:text="@string/whitespace_single" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/subtitle_size"
                android:padding="@dimen/title_padding"
                android:text="@string/great_day" />

        </LinearLayout>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/alarm_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_tasks_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/title_size"
                android:padding="@dimen/title_padding"
                android:text="@string/current_tasks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:gravity="center"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/fragment_alarm_item" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>